# toys

3DTo2DProjection/: CMakeLists.txt  project.cpp
AeroPostPro/: README.txt  fluid_postpro.sh  struct_binary_postpro.sh
AutoDiffPyTorch/: autodiff_test.py
CheckSurfaceClosedness/: CMakeLists.txt  closed.cpp
CleanOptDec/: CMakeLists.txt  clean.cpp
CylinderGen2D/: CMakeLists.txt  cylinder2d.cpp
DuplicatedElems/: duplicated_elems.cpp
GlueStick/: glue.cpp
Gmsh2AEROF/: gmsh2aerof.cpp
Gmsh2AEROS/: gmsh2aeros.cpp
HangingNodesRemover/: HNRemover.cpp
HexFEMgen/: hexgen.cpp
Imperfectit/: imperfectit.cpp
LaserFluidCoupling1D/: hgversion.h  input.cpp  input.h  integrate.cpp  main.cpp  makefile  output.cpp  output.h
LaserFluidCoupling1D/Test/: input.st  log.out  output_solution.txt  output_summary.txt
LaserFluidCoupling1D/parser/: Assigner.C
MPISplitExample/: compile_script  solver1.cpp  solver2.cpp
MergeDuplicateNodes/: merge.cpp
MeshPartitionViewer/: CMakeLists.txt  dec2xpost.cpp
NodalProbe/: probe.cpp
NodalStats/: nodalstats.cpp  test.cpp
PETScNonlinearSolver/: compile_script  function.h  nonlinear_solver.cpp  run_command
PETScOptimizer/: Solution.m  compile_script  function.h  function_test.h  optimizer.cpp  read_vector.h  run_command  solution.txt  solve  tinkercliffs_sbatch.sh
PETScOptimizer/Data/: A.txt  B.txt  Omega_re.txt  cluster_prep.m  cobb_douglas.txt  element.txt  factor.txt  factor2.txt  freq_re.txt  freq_re_old.txt  function.txt  init_lambda.txt  keynes.txt  sol_shockest.txt  tar_p.txt  theta.txt
PseudoStructureAEROS/: CMakeLists.txt  Main.C  Makefile  cmake_install.cmake  cplCode
PseudoStructureAEROS/Comm/: CMakeLists.txt  Communicator.h  CommunicatorCore.C  Makefile  cmake_install.cmake
PseudoStructureAEROS/Hetero/: CMakeLists.txt  FlExchange.C  FlExchange.h  Makefile  cmake_install.cmake
PseudoStructureAEROS/Math/: Vector.h
PseudoStructureAEROS/Utils/: ResizeArray.h
PyTorchTests/DataPrep1/: dataprep1.py
PyTorchTests/Fun1D/: README.txt  datagen.cpp  nn.py
PyTorchTests/Fun2D/: a.out  datagen.cpp  nn.py  training_data.txt  validation_data.txt
PyTorchTests/Fun2DProd/: README.txt  datagen.cpp  nn.py  plot_results.py
PyTorchTests/Fun2DQuad/: README.txt  datagen.cpp  nn.py  plot_results.py
PyTorchTests/Fun2DSine/: README.txt  datagen.cpp  nn.py  plot_results.py
PyTorchTests/Fun2DSine2/: README.txt  datagen.cpp  nn.py  plot_results.py
PyTorchTests/WaveEqSink/: README.txt  nn_basic.py  nn_conservative_nondim.py  nn_identity.py  nn_scaled.py  plot_results.py  training_data.txt  validation_data.txt
PyTorchTests/WaveEqSink/DataGen/: FVM_scalar_multiphase_ddt.m  README.txt  log.out  results.txt  textfile_writer.m  tinkercliffs_sbatch.sh
PyTorchTests/WaveEqSink/DataPrep/: prep.py  results2datagen.sh  results_clean.txt  training_data.txt  validation_data.txt
PyTorchTests/WaveEqSink/Exam1/: conservation_test.py  test_results.txt  test_results_basic.txt
ReduceSolution/: cut.cpp
ResourceAllocation/: compile_script  solver1.cpp  solver2.cpp  solver3.cpp  solver4.cpp  solver5.cpp
ResourceAllocationSimplex/: CMakeLists.txt  IoData.cpp  Main.cpp  nonlinear_simplex_allocator.cpp
ResourceAllocationSimplex/Test/: input.st
ResourceAllocationSimplex_NonConcurrent/: IoData.h  Main.cpp
ResourceAllocationSimplex_NonConcurrent/Test_Dec2025/: input.st
ShrinkOrExpand/: blowfish  blowfish.cpp  rotate.cpp  swap_axis.cpp
ShrinkOrExpand/Agard/: shrink.cpp
Slicer/: GeoToolsLite.h  Slicer.cpp
TrimSurface/: trim.cpp
TrimSurface/Test/: output.top  ureter_noDup.top
UnitConverter/: compile  unit_converter.cpp
assemble/: assembler.cpp
meshMatcher/: CMakeLists.txt  KDTree.h  double_matcher.cpp  matcher.cpp  postpro.cpp
obj2top/: obj2top.cpp
stl2top/: stl2top.cpp
tweezer/: step2.cpp  tweezer.cpp
xp2exo/: CMakeLists.txt  README.md  xp2exo.cpp
xp2exo/cmake/: FindNetCDF.cmake
(+11 files in other folders)
